# AgentRadar

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260713_0001_create_repository_tables.py  20260713_0002_create_search_tables.py  20260713_0003_create_analysis_reports.py  20260713_0004_create_interaction_tables.py  20260714_0005_add_snapshot_source.py
backend/app/: __init__.py  collect_trending.py  main.py
backend/app/agents/: __init__.py  graph.py  state.py
backend/app/api/: dependencies.py  router.py
backend/app/core/: __init__.py  config.py  database.py  exception_handlers.py
backend/app/demo/: __init__.py  __main__.py  seed.py
backend/app/evaluation/: __init__.py  __main__.py  evaluator.py  schemas.py
backend/app/models/: __init__.py  analysis.py  base.py  interaction.py  repository.py  search.py
backend/app/providers/: __init__.py  llm.py
backend/app/repositories/: __init__.py  analysis_repository.py  interaction_repository.py  repository_repository.py  search_session_repository.py
backend/app/schemas/: __init__.py  analysis.py  github.py  health.py  interaction.py  search.py  trending.py
backend/app/services/: __init__.py  cache_service.py  filter_service.py  llm_enhancement_service.py  repository_service.py  requirement_service.py  trend_service.py  (+2 more)
backend/demo/: demo_data.json
backend/evaluation/: agent_cases.json
backend/tests/: __init__.py  conftest.py  test_health.py
(+71 files in other folders)
